--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Extensão Replicação",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Extensão Replicação",
   "manifest_version": 2,
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["src/scripts/content.js", "src/config/index.js"]
     }
   ],
   "browser_action": {
-    "default_popup": "index.html",
+    "default_popup": "src/index.html",
     "default_title": "Replicação",
-    "default_icon": "replicacao.png"
+    "default_icon": "src/assets/replicacao.png"
   },
   "permissions": ["tabs"]
 }
